# deep-research-with-langgraph

./: .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
docs/: LOCAL_SETUP.md  SCOPE_MODULE.md  SCOPE_VIDEO_SCRIPT.md  scope_graph.mmd
ops/ollama/: Modelfile
src/deep_research_langgraph/: __init__.py  check_setup.py  models.py  settings.py  studio.py
src/deep_research_langgraph/full_agent/: __init__.py  __main__.py  cli.py  graph.py  nodes.py  prompts.py  session.py  types.py  views.py  web_app.py
src/deep_research_langgraph/langsmith/: __init__.py  client.py  config.py  metadata.py  tracing.py  verify.py
src/deep_research_langgraph/research/: __init__.py  __main__.py  cli.py  graph.py  nodes.py  prompts.py  session.py  tools.py  types.py  views.py  web_app.py
src/deep_research_langgraph/research_mcp/: __init__.py  __main__.py  cli.py  config.py  graph.py  nodes.py  prompts.py  session.py  tools.py  types.py  views.py  web_app.py
src/deep_research_langgraph/research_mcp/files/: coffee_shops_sf.md
src/deep_research_langgraph/research_supervisor/: __init__.py  __main__.py  cli.py  diagrams.py  graph.py  nodes.py  prompts.py  session.py  tools.py  types.py  views.py  web_app.py
src/deep_research_langgraph/scope/: __init__.py  __main__.py  cli.py  dates.py  graph.py  nodes.py  prompts.py  session.py  streaming.py  types.py  views.py  web_app.py
tests/: test_check_setup.py  test_langsmith_config.py  test_research_graph.py  test_research_mcp_cli.py  test_research_mcp_config.py  test_research_mcp_graph.py  test_research_mcp_views.py  test_research_supervisor_cli.py  test_research_supervisor_diagrams.py  test_research_supervisor_graph.py  test_research_supervisor_views.py  test_research_tools.py  test_research_views.py  test_scope_graph.py  test_scope_streaming.py  test_scope_views.py  test_settings.py
