[project]
name = "deep-research-with-langgraph"
version = "0.1.0"
description = "Local-first Deep Research with LangGraph course workspace using Ollama."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "langchain>=1.0,<2",
  "langchain-mcp-adapters>=0.3.0",
  "langchain-ollama>=1.0,<2",
  "langgraph>=1.0,<2",
  "langgraph-sdk>=0.4.2",
  "langsmith>=0.10.2",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "tavily-python>=0.7.26",
]

[project.scripts]
deep-research-scope = "deep_research_langgraph.scope.cli:main"
deep-research-agent = "deep_research_langgraph.research.cli:main"
deep-research-mcp = "deep_research_langgraph.research_mcp.cli:main"

[dependency-groups]
dev = [
  "ipykernel>=6.30,<8",
  "jupyterlab>=4.4,<5",
  "langgraph-cli[inmem]>=0.4.31",
  "pyright>=1.1.400,<2",
  "pytest>=8.4,<10",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research_langgraph"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
docstring-code-format = true
